Chapter 1.1 and 1.2 slides

--- a/slides/css/default.css
+++ b/slides/css/default.css
@@ -71,6 +71,17 @@ th, td { padding: 5px; }
   }
 }
 
+div.container div.middle{
+  position: relative;
+  top: 42%;
+  transform: translateY(-42%);
+}
+
+div.container {
+  position: relative;
+  height: 85%;
+  bottom: 10px;
+}
 
 .bottom {
   position: absolute;
@@ -118,4 +129,35 @@ th, td { padding: 5px; }
 
 .nudge-down {
   margin-top:20px !important;
+}
+
+.inline-left{
+  margin-right:auto;
+  width:47%;
+  display:inline-block;
+}
+
+.inline-right{
+  margin-left: auto;
+  width:47%;
+  display:inline-block;
+}
+
+
+.red{
+  color:red;
+}
+
+.grey, .gray{
+  color:gray;
+}
+
+.toprightfig{
+  position:absolute;
+  top:-10px;
+  right: 10px;
+  max-height: 150px;
+  max-width: 150px;
+  height:auto;
+  width: auto;
 }
