Start of 1.3/review

--- a/slides/css/default.css
+++ b/slides/css/default.css
@@ -161,3 +161,11 @@ div.container {
   height:auto;
   width: auto;
 }
+
+.underline{
+  border-bottom:1px solid black;display:inline-block;
+}
+
+.hidden{
+  visibility:hidden;
+}
