--- a/slides/css/default.css
+++ b/slides/css/default.css
@@ -20,17 +20,17 @@ a, a > code {
 }
 /* Two-column layout */
 .left-column {
-  width: 80%;
-  height: 92%;
+  width: 76%;
   float: left;
+  margin-left:2%;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
   color: #000;
 }
 .right-column {
   width: 20%;
+  margin-right:2%;
   float: right;
-  padding-top: 1em;
 }
 .pull-left {
   float: left;
