--- a/slides/css/default.css
+++ b/slides/css/default.css
@@ -32,6 +32,19 @@ a, a > code {
   margin-right:2%;
   float: right;
 }
+.left-column60 {
+  width: 59%;
+  float: left;
+  margin-left:1%;
+}
+.left-column60 h2:last-of-type, .left-column h3:last-child {
+  color: #000;
+}
+.right-column40 {
+  width: 39%;
+  margin-right:1%;
+  float: right;
+}
 .pull-left {
   float: left;
   width: 47%;
@@ -43,6 +56,7 @@ a, a > code {
 .pull-right ~ * {
   clear: both;
 }
+
 img, video, iframe {
   max-width: 100%;
 }
